<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/marati"
        android:icon="@drawable/success"
        android:orderInCategory="100"
        android:title="@string/marati"

        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/hindi"
        android:icon="@drawable/success"
        android:orderInCategory="100"
        android:title="@string/hindi"

        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/english"
        android:icon="@drawable/success"
        android:orderInCategory="100"
        android:title="@string/english"
        app:actionViewClass="android.support.v7.widget.SearchView" />
</menu>